# pixie

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  collector.py  crates.js  help.html  install.sh  pixie.service  pixied.py  run_test.sh  search-index.js  settings.html  setup.sh  test.sh  test_config.yaml
.github/: dependabot.yml
.github/workflows/: docs.yml  rust.yml
buildroot/: Config.in  external.desc  external.mk  linux_config
buildroot/configs/: pixie2_defconfig
client/: chunk_rebuilder.cpp  chunks_info.cpp  main.cpp
cmake-modules/: FindJSONCPP.cmake
common/: common.cpp  file.cpp  hash.cpp
config/: busybox.config  linux-4.11.config
contrib/: README.md  build.sh  buildroot-2017.02.2.config  busybox-1.25.0.config  busybox-1.26.2.config  create_initrd.sh  linux-4.11.config  linux-4.7.3.config
contrib/doconfig/: init
contrib/initrd/: init
examples/: test1.json  test2.json
include/: bchooser.h  chunk_rebuilder.h  chunk_sender.h  chunks_info.h  common.h  communication.h  config.h  config_file.h  file.h  hash.h  http_server.h
pixie-client/: Cargo.toml
pixie-client/src/: boot_order.rs  main.rs  pull.rs  push.rs  register.rs
pixie-core/: Cargo.toml  example.config.yaml
pixie-core/src/: dnsmasq.rs  http.rs  lib.rs  shared.rs  tcp.rs  udp.rs
pixie-pull/: Cargo.toml
pixie-pull/src/: main.rs
pixie-push/: Cargo.toml
pixie-push/src/: main.rs
pixie-register/: Cargo.toml
pixie-register/src/: main.rs
pixie-server/: Cargo.toml  example.config.yaml
pixie-server/src/: dnsmasq.rs  http.rs  main.rs  ping.rs  state.rs  tcp.rs  udp.rs
pixie-server/src/state/: images.rs  mod.rs  units.rs
pixie-shared/: Cargo.toml
pixie-shared/src/: bijection.rs  chunk_codec.rs  config.rs  lib.rs  util.rs
pixie-uefi/: Cargo.toml  dnsmasq.conf
pixie-uefi/.vim/: coc-settings.json
pixie-uefi/pixie-uefi/: Cargo.toml
pixie-uefi/pixie-uefi/src/: main.rs  pull.rs  push.rs  reboot_to_os.rs  register.rs
pixie-uefi/pixie-uefi/src/os/: boot_options.rs  disk.rs  error.rs  executor.rs  mod.rs  net.rs  timer.rs
pixie-uefi/src/: export_cov.rs  flash.rs  main.rs  parse_disk.rs  power_control.rs  pull.rs  push.rs  reboot_to_os.rs  register.rs  store.rs
pixie-uefi/src/os/: allocator.rs  async.rs  boot_options.rs  disk.rs  error.rs  executor.rs  input.rs  logger.rs  memory.rs  mod.rs  mpsc.rs  net.rs  rng.rs  send_wrapper.rs  sync.rs  timer.rs  ui.rs  util.rs
pixie-uefi/src/os/executor/: event.rs  mod.rs
pixie-uefi/src/os/net/: interface.rs  mod.rs  speed.rs  tcp.rs  udp.rs
pixie-uefi/src/parse_disk/: ext4.rs  fat.rs  gpt.rs  mod.rs  ntfs.rs  swap.rs
pixie-uefi/src/push/: parse_disk.rs
pixie-web/: Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml  style.css
pixie-web/src/: main.rs
pixie_server/: all.html  fn.find_mac.html  fn.find_network.html  fn.main.html  index.html  struct.PixieOptions.html
pixie_server/dnsmasq/: fn.get_hosts.html  fn.main.html  fn.write_config.html  fn.write_hosts.html  index.html  struct.DnsmasqHandle.html
pixie_server/http/: enum.UnitSelector.html  fn.action.html  fn.curr_action.html  fn.delete_image.html  fn.forget.html  fn.gc.html  fn.image.html  fn.main.html  fn.rollback.html  fn.status.html  index.html  sidebar-items.js
pixie_server/ping/: fn.main.html  index.html
pixie_server/state/: constant.CHUNKS_DIR.html  constant.CONFIG_YAML.html  constant.IMAGES_DIR.html  constant.REGISTERED_JSON.html  fn.atomic_write.html  fn.build_hostmap.html  fn.get_image_csize.html  index.html  sidebar-items.js  struct.State.html
pixie_server/tcp/: fn.handle_connection.html  fn.handle_request.html  fn.main.html  index.html
pixie_server/udp/: fn.broadcast_chunks.html  fn.broadcast_hint.html  fn.compute_hint.html  fn.handle_requests.html  fn.main.html  index.html
pixie_shared/: all.html  constant.ACTION_PORT.html  constant.BODY_LEN.html  constant.CHUNKS_PORT.html  constant.CHUNK_SIZE.html  constant.HEADER_LEN.html  constant.HINT_PORT.html  constant.MAX_CHUNK_SIZE.html  constant.PACKET_LEN.html  constant.PING_PORT.html  constant.UDP_BODY_LEN.html  enum.Action.html  enum.StatusUpdate.html  enum.TcpRequest.html  enum.UdpRequest.html  index.html  sidebar-items.js  struct.Address.html  struct.Chunk.html  struct.ChunkStat.html  struct.ChunkStats.html  struct.HintPacket.html  struct.Image.html  struct.ImageStat.html  struct.ImagesStats.html  struct.RegistrationInfo.html  struct.Station.html  type.ChunkHash.html  type.ChunksStats.html  type.Ip.html  type.Offset.html
pixie_shared/bijection/: index.html  struct.Bijection.html
pixie_shared/chunk_codec/: constant.BODY_LEN.html  constant.HEADER_LEN.html  constant.MAX_SIZE.html  constant.MIN_SIZE.html  constant.PACKET_LEN.html  enum.DecoderError.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Encoder.html
pixie_shared/config/: enum.ActionKind.html  enum.DhcpMode.html  index.html  sidebar-items.js  struct.Config.html  struct.HostsConfig.html  struct.HttpConfig.html  struct.Unit.html
pixie_shared/util/: index.html  sidebar-items.js  struct.BytesFmt.html
pixie_uefi/: all.html  constant.MIN_MEMORY.html  fn.complete_action.html  fn.get_action.html  fn.main.html  fn.run.html  fn.server_discover.html  fn.shutdown.html  index.html  sidebar-items.js
pixie_uefi/export_cov/: fn.export.html  index.html  sidebar-items.js
pixie_uefi/flash/: fn.fetch_image.html  fn.flash.html  fn.handle_packet.html  index.html  sidebar-items.js  struct.PartialChunk.html  struct.Stats.html
pixie_uefi/os/: enum.MessageKind.html  fn.exit_boot_services.html  index.html  sidebar-items.js  (+4 more)
pixie_web/: all.html  fn.App.html  fn.Disconnect.html  fn.Group.html  fn.Images.html  fn.main.html  fn.send_req.html  index.html  sidebar-items.js  struct.AppProps.html  struct.Bytes.html  struct.DisconnectProps.html  struct.GroupProps.html  struct.ImagesProps.html
server/: bchooser.cpp  chunk_sender.cpp  config_file.cpp  file.cpp  http_server.cpp  main.cpp
src/: bootp_only.ipxe  collector.py  pixied.py
uefi-reboot-skip/: Cargo.toml  README.md
util/: kexec.c  reboot.c  tinycurl.c
(+196 files in other folders)
