[package]
name = "pixie-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
blake3 = "1.3.1"
clap = { version = "3.2.8", features = ["derive"] }
gpt = "3.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.89"
zstd = "0.11.2"

[dependencies.pixie-shared]
path = "../pixie-shared"
version = "0.1.0"

[profile.release]
strip = true
lto = true
