[package]
name = "pixie-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
blake3 = { version = "1.3.1", default-features = false }
clap = { version = "3.2.8", features = ["std", "derive"], default-features = false }
gpt = "3.0.0"
reqwest = { version = "0.11.13", features = ["blocking"], default-features = false }
serde_json = "1.0.89"
zstd = { version = "0.11.2", default-features = false }
serde_derive = "1.0.148"
serde = "1.0.148"
tokio = { version = "1.23.0", features = ["rt", "macros"] }

[dependencies.pixie-shared]
path = "../pixie-shared"
version = "0.1.0"

[profile.release]
strip = true
lto = true
opt-level = 's'
panic = 'abort'
