[package]
edition = "2021"
name = "pixie-core"
version = "0.1.0"

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
anyhow = "1.0.57"
blake3 = "1"
clap = { version = "3.1.15", features = ["derive"] }
env_logger = "0.9.0"
interfaces = "0.0.8"
ipnet = { version = "2.5.0", features = ["serde"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.8"
libc = "0.2.137"
macaddr = { version = "1.0.1", features = ["serde"] }
mktemp = "0.5.0"
tokio = { version = "1.22.0", features = ["macros"] }
actix-rt = "2.7.0"

[dependencies.pixie-shared]
path = "../pixie-shared"
