[package]
edition = "2021"
name = "pixie-core"
version = "0.1.0"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.71"
blake3 = "1"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
interfaces = "0.0.9"
ipnet = { version = "2.7.2", features = ["serde"] }
libc = "0.2.144"
log = "0.4.17"
macaddr = { version = "1.0.1", features = ["serde"] }
mktemp = "0.5.0"
postcard = { version = "1.0.4", default-features = false, features = ["alloc"] }
serde = "1.0.163"
serde_derive = "1.0.163"
serde_yaml = "0.9"
tokio = { version = "1.28.1", features = ["macros", "fs"] }
serde_json = "1.0.96"
hostfile = "0.2.0"

[dependencies.pixie-shared]
path = "../pixie-shared"
features = ["std"]
