[package]
name = "pixie-pull"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
blake3 = "1.3.1"
serde_json = "*"
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies.clap]
features = ["derive"]
version = "3.2.8"

[dependencies.pixie-shared]
path = "../pixie-shared"
version = "0.1.0"
