[package]
name = "pixie-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
blake3 = "1.3.1"
clap = { version = "3.2.8", features = ["derive"] }
pixie-core = { path = "../pixie-core", version = "0.1.0" }
