[package]
name = "pixie-register"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "*"

[dependencies.clap]
features = ["derive"]
version = "3.2.8"

[dependencies.pixie-shared]
path = "../pixie-shared"
version = "0.1.0"
