[package]
edition = "2021"
name = "pixie-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
blake3 = "1.5.5"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
interfaces = "0.0.9"
ipnet = { version = "2.9.0", features = ["serde"] }
libc = "0.2.172"
log = "0.4.27"
macaddr = { version = "1.0.1", features = ["serde"] }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
serde = "1.0.219"
serde_derive = "1.0.193"
serde_yaml = "0.9"
tokio = { version = "1.44.2", features = ["macros", "fs", "rt-multi-thread", "sync", "signal"] }
serde_json = "1.0.140"
hostfile = "1.1.1"
hex = "0.4.3"
axum = "0.7.2"
tower-http = { version = "0.6.4", features = ["fs", "compression-gzip", "auth", "trace"] }
bytes = "1.5.0"
http-body-util = "0.1.3"
futures = "0.3.30"
tokio-stream = { version = "0.1.17", features = ["sync"] }
chrono = "0.4.41"
tokio-util = "0.7.15"

[dependencies.pixie-shared]
path = "../pixie-shared"
features = ["std"]

[profile.release]
lto = true
