[package]
edition = "2024"
name = "pixie-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.2"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
interfaces = "0.0.9"
ipnet = { version = "2.11.0", features = ["serde"] }
libc = "0.2.182"
log = "0.4.29"
macaddr = { version = "1.0.1", features = ["serde"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = "1.0.228"
serde_derive = "1.0.193"
serde_yaml = "0.9"
tokio = { version = "1.48.0", features = ["macros", "fs", "rt-multi-thread", "sync", "signal"] }
serde_json = "1.0.149"
hostfile = "1.1.1"
hex = "0.4.3"
axum = "0.7.2"
tower-http = { version = "0.6.8", features = ["fs", "compression-gzip", "auth", "trace"] }
bytes = "1.11.1"
http-body-util = "0.1.3"
futures = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
chrono = "0.4.44"
tokio-util = "0.7.18"
lz4_flex = "0.11.6"

[dependencies.pixie-shared]
path = "../pixie-shared"
features = ["std"]

[profile.release]
lto = true
