[package]
name = "pixie-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1", default-features = false }
ipnet = { version = "2.9.0", optional = true, features = ["serde"] }
macaddr = { version = "1.0.1", optional = true, features = ["serde"] }
serde =  { version = "1.0.193", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2.0.12", default-features = false }

[features]
std = ["ipnet", "macaddr", "serde/std"]
