[package]
edition = "2021"
name = "pixie-uefi"
version = "0.1.0"

[[bin]]
name = "pixie-uefi"
path = "src/main.rs"
test = false
bench = false

[features]
coverage = ["dep:minicov"]

[dependencies]
anstyle = { version = "1.0.13", default-features = false }
blake3 = { version = "1.8.2", default-features = false, features = ["prefer_intrinsics", "no_avx512", "pure"] }
core_detect = "1.0.0"
derive_more = { version = "2.0.1", features = ["from"], default-features = false }
futures = { version = "0.3.29", default-features = false, features = ["alloc", "async-await"] }
gpt_disk_io = "0.16.2"
log = "0.4.28"
lz4_flex = { version = "0.11.5", default-features = false }
managed = { version = "0.8.0", default-features = false, features = ["alloc"] }
minicov = { version = "0.3.7", optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "proto-ipv4", "medium-ethernet", "socket-udp", "socket-tcp", "socket-dhcpv4", "async", "socket-tcp-cubic"] }
thingbuf = { version = "0.1.6", default-features = false, features = ["alloc"] }
uefi = { version = "0.33.0", features = ["alloc", "global_allocator", "panic_handler"] }

[dependencies.pixie-shared]
path = "../pixie-shared"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
