[package]
name = "pixie-web"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.30"
leptos = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.5"
log = "0.4.25"
#macaddr = "1.0.1"
pixie-shared = { version = "0.1.0", path = "../pixie-shared", features = ["macaddr", "std"] }
reqwest = { version = "0.12.12", default-features = false, features = ["stream"] }
serde_json = "1.0.138"
thaw = { version = "0.3.4", features = ["csr"] }
