[package]
name = "pixie-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pixie-web"
path = "src/main.rs"
test = false

[dependencies]
bytes = "1.7.2"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.30"
leptos = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.5"
log = "0.4.27"
#macaddr = "1.0.1"
pixie-shared = { version = "0.1.0", path = "../pixie-shared", features = ["macaddr", "std"] }
reqwest = { version = "0.12.22", default-features = false, features = ["stream"] }
serde_json = "1.0.142"
thaw = { version = "0.4.8", features = ["csr"] }

[profile.release]
lto = true
