[package]
edition = "2021"
name = "uefi_app"
version = "0.1.0"

[dependencies]
managed = { version = "0.8.0", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
core_detect = "1.0.0"
futures = { version = "0.3.25", default-features = false, features = ["alloc"] }
pixie-shared = { version = "0.1.0", path = "../../pixie-shared" }
serde_json = { version = "1.0.90", default-features = false, features = ["alloc"] }
gpt_disk_io = "0.14.0"
miniz_oxide = { version = "0.6.2", features = ["simd"] }
blake3 = { version = "1.3.3", default-features = false, features = ["prefer_intrinsics", "no_avx512", "pure"] }

[dependencies.uefi]
version = "0.18.0"
features = ["alloc"]
# path = "../uefi-rs/uefi"

[dependencies.uefi-services]
version = "0.15.0"
# path = "../uefi-rs/uefi-services"

[dependencies.smoltcp]
version = "0.8.1"
# path = "../smoltcp"
default-features = false
features = ["alloc", "proto-ipv4", "medium-ethernet", "socket-udp", "socket-tcp", "socket-dhcpv4", "async"]

[profile.release]
panic = "abort"
opt-level = "s"

[patch.crates-io]
uefi = { path = "../uefi-rs/uefi" }
uefi-services = { path = "../uefi-rs/uefi-services" }
smoltcp = { path = "../smoltcp" }
